--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "clubs-api",
+  "name": "backend-flatimer",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/romulomelendez/clubs-api.git"
+    "dev": "tsx ./src/main/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/romulomelendez/clubs-api/issues"
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "typescript": "^5.2.2"
   },
-  "homepage": "https://github.com/romulomelendez/clubs-api#readme",
-  "description": ""
+  "devDependencies": {
+    "@prisma/client": "^5.22.0",
+    "@types/cors": "^2.8.16",
+    "@types/express": "^4.17.20",
+    "prettier": "3.1.1",
+    "prisma": "^5.11.0",
+    "tsx": "^4.1.3"
+  }
 }
