--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@prisma/client": "^5.22.0",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.20",
+    "@types/jsonwebtoken": "^9.0.9",
     "prettier": "3.1.1",
     "prisma": "^5.11.0",
     "tsx": "^4.1.3"
