--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "main/server.ts",
+  "type": "module",
   "scripts": {
-    "dev": "tsx ./src/main/server.ts"
+    "dev": "tsx ./src/main/server.ts",
+    "test": "dotenv -e .env.local -- jest"
   },
   "keywords": [],
   "author": "",
@@ -13,17 +15,24 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "dotenv-cli": "^8.0.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@prisma/client": "^5.22.0",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.20",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/supertest": "^6.0.3",
+    "jest": "^29.7.0",
     "prettier": "3.1.1",
     "prisma": "^5.11.0",
+    "supertest": "^7.1.0",
     "tsx": "^4.1.3"
   }
 }
