feat: docker environment to run test in a test database

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,9 @@ DATABASE_URL="postgresql://[YOUR_USER]:[YOUR_PASSWORD]@localhost:5432/[YOUR_DB_N
 DB_NAME=[YOUR_DB_NAME]
 DB_USER=[YOUR_DB_USER]
 DB_PASSWORD=[YOUR_DB_PASSWORD]
+
+# Admin Credentials
+ADMIN_USERNAME=[YOUR_ADMIN_USERNAME]
+ADMIN_PASSWORD=[YOUR_ADMIN_PASSWORD]
+
+JWT_SECRET=[YOUR_JWT_SECRET]
