--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - "3000:3000"
     depends_on:
       - db
+      
   prisma-studio:
     build:
       context: .
@@ -30,6 +31,8 @@ services:
       DATABASE_URL: ${DATABASE_URL}
     ports:
       - "5555:5555"
+    expose:
+      - "5555"
     command: npx prisma studio
     depends_on:
       - db
