--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx ./src/main/server.ts",
-    "test": "dotenv -e .env.local -- jest"
+    "test": "dotenv -e .env.test -- jest",
+    "test:docker": "docker compose -f docker-compose.test.yml up --build"
   },
   "keywords": [],
   "author": "",
